fixed the scrollbar view while clicked menu button

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -125,6 +125,9 @@
         
     }
 
+    //Hide all content of the page so there will be no scrollbar
+    
+
     //ICON
     &_icon{
         content: "";
@@ -157,3 +160,8 @@
     
 
 }
+
+.navigation .navigation_checkbox:checked ~  * {
+       // display: none;  
+      
+    }
